Give myself cluster-admin

--- a/resources/deploy-devcontainer.yaml
+++ b/resources/deploy-devcontainer.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: devcontainer
     spec:
+      serviceAccountName: admin
       containers:
       - image: ghcr.io/kylape/devcontainer:main
         imagePullPolicy: Always
