--- a/resources/deploy-devcontainer.yaml
+++ b/resources/deploy-devcontainer.yaml
@@ -42,6 +42,8 @@ spec:
           mountPath: /var/lib/containers
         - name: dev-fuse
           mountPath: /dev/fuse
+        - name: podman-sock
+          mountPath: /run/podman/podman.sock
       volumes:
       - name: workspace
         persistentVolumeClaim:
@@ -64,3 +66,7 @@ spec:
         hostPath:
           path: /dev/fuse
           type: CharDevice
+      - name: podman-sock
+        hostPath:
+          path: /run/podman/podman.sock
+          type: Socket
